Closed Bug 556240 Opened 15 years ago Closed 15 years ago

Profiler broken, clearing activegc then doing work

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect, P1)

x86
macOS
defect

Tracking

(Not tracked)

VERIFIED FIXED
flash10.1

People

(Reporter: treilly, Assigned: treilly)

Details

Attachments

(1 file)

This is backwards: m_gc->heap->SetActiveGC(m_prevgc); // <- m_prevgc = 0 GCAssert(curgc == m_gc); m_gc->ThreadLeave(doCollectionWork); // <- currently executing We made it that way because we can't release the lock in ThreaedLeave until after the active gc is cleared. The order of operations needs to be: // do exit work // pop active gc // release lock right now its // pop active gc // do exit work // release lock
Assignee: nobody → treilly
Severity: normal → blocker
Priority: -- → P1
Target Milestone: --- → flash10.1
Status: NEW → ASSIGNED
Flags: flashplayer-qrb+
Attachment #436230 - Flags: review?(lhansen) → review+
pushed in tamarin-redux-argo: 3901:d043ba13e7d4 we need a selftest for this leaving open
http://hg.mozilla.org/tamarin-redux/rev/d043ba13e7d4 resolving, will open new bug for selftests
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
(In reply to comment #3) > http://hg.mozilla.org/tamarin-redux/rev/d043ba13e7d4 > resolving, will open new bug for selftests Tom what is bug # that is tracking the selftest?
QA Contact: gc → brbaker
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
QA Contact: brbaker → gc
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: