fix bug 556240 injection in profiler, need to make sure GC is active when doing any collection work (r=lhansen)